# MediaDrop

./: .breakpoints  .replit  README.md  index.html  main.py  pyproject.toml  replit.nix
attached_assets/: Pasted-INFO-Started-server-process-2631-INFO-Waiting-for-application-startup-INFO-Appli-1740029445290.txt  Pasted-INFO-Started-server-process-2790-INFO-Waiting-for-application-startup-INFO-Appli-1740029501162.txt  Pasted-INFO-Started-server-process-2957-INFO-Waiting-for-application-startup-INFO-Appli-1740029578755.txt  Pasted-Running-the-code-in-my-project-results-in-the-following-raise-exc-File-home-runner-work-1740029571795.txt
static/: csv-preview.js  script.js  style.css
